@@ -19,11 +19,11 @@
 #define TIME			// System time support.
 
 #define NETWORK                 // Networking support.
-#define LWIP_NETWORK            // LwIP INET networking support.
+#undef LWIP_NETWORK            // LwIP INET networking support.
 
 #undef ALL_COMMANDS		// Include all commands.
 #define TIME_COMMANDS           // Include time related commands.
-#define PROC_COMMANDS            // Include "bin" commands: ls, etc. (experimental).
+#undef PROC_COMMANDS            // Include "bin" commands: ls, etc. (experimental).
 
 
 #include "components.ld"
